--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="style.css">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +15,14 @@
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <h1>Ini adalah tampilan Home dari Website sederhana</h1>
-                <p><b>Nama: </b> Ryan Christian Fabian Rattu</p>
-                <p><b>NIM: </b>220211060114</p>
             </nav>
         </header>
     </body>
+    <main>
+    <h1>Ini adalah tampilan Home dari Website sederhana</h1>
+    <br>
+    <p><b>Nama: </b> Ryan Christian Fabian Rattu</p>
+    <br> <!-- ini perubahan nya --> 
+    <p><b>NIM: </b>220211060114</p>
+</main>
 </html>
