--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="blogstyle.css">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,12 +19,13 @@
         </header>
         <main>
             <h1>Blog</h1>
+            <br>
             <h2>Artikel mengenai Honkai Star Rail</h2>
             <article>
                 <p>Honkai: Star Rail adalah video game permainan gacha dengan mode permainan giliran yang dikembangkan oleh miHoYo, diterbitkan oleh miHoYo di Tiongkok dan secara global oleh Cognosphere, d/b/a HoYoverse. Ini adalah permainan giliran pertama dari miHoYo, menampilkan karakter utama, yang disebut "Trailblazer", berpergian melintasi dunia melalui Astral Express untuk menyelesaikan bencana yang disebabkan oleh "Stellaron".</p>
                 <p>Permainan ini menerima harapan luas sebelum diluncurkannya, terutama karena popularitas permainan sebelumnya dari miHoYo, Honkai Impact 3rd. Permainan ini dinominasikan untuk Most Wanted Game Award pada Golden Joystick Awards 2022 dan memenangkan Best Popularity Award of World Science Fiction Game Annual Awards 2023</p>
                 <p>Honkai: Star Rail memiliki mode permainan tunggal dan menawarkan pengalaman permainan yang menarik dengan elemen gacha dan sistem permainan giliran. Game ini memerlukan koneksi internet untuk dimainkan dan menawarkan pengalaman permainan yang menarik dengan latar belakang dan karakter yang unik.</p>
-            </article>
+            </article> <br>
             <h2>Artikel mengenai Girl Group New Jeans</h2>
             <article>
                 <p>NewJeans adalah grup wanita Korea Selatan yang dibentuk oleh ADOR, terdiri dari lima anggota: Minji, Hanni, Danielle, Haerin, dan Hyein. Mereka dikenal dengan gambaran "girl next door" mereka dan musik mereka yang dipengaruhi oleh genre pop dan R&B 1990an dan 2000an, menggabungkan berbagai gaya tarian dan klub.</p>
@@ -32,7 +34,7 @@
                 <p>EP kedua mereka, "Get Up," mencapai posisi nomor satu di US Billboard 200 dan menjual lebih dari satu juta salinan di Korea Selatan. Single utamanya, "Super Shy," menjadi lagu dengan posisi teratas mereka di Billboard Global 200 (nomor dua), US Billboard Hot 100, dan UK Singles Chart.</p>
                 <p>NewJeans menerima penghargaan rookie dan ditampilkan dalam listik seperti Time's Next Generation Leaders dan Forbes's Korea Power Celebrity 40. IFPI menamai NewJeans sebagai artis terjual terbanyak di dunia pada tahun 2023. Selain musik, NewJeans telah menjadi sponsor dan berkolaborasi dengan beberapa merek, termasuk Musinsa, Levi's, Coca-Cola, LG Electronics, Apple Inc., dan McDonald's Korea</p>
                 <p>Nama mereka mengacu pada ide bahwa jeans adalah item gaya yang timeless dan niat grup untuk membuat gambaran timeless untuk diri mereka. Nama ini juga merupakan bermain kata pada frasa "new genes," merujuk pada grup membawa generasi baru musik pop</p>
-            </article>
+            </article> <br>
             <h2>Artikel mengenai Toji Fushiguro</h2>
             <article>
                 <p>Toji Fushiguro adalah karakter yang muncul berulang kali dalam seri Jujutsu Kaisen. Dia adalah anggota klan Zenin yang sebelumnya dan pembunuh terkenal yang dikenal sebagai Sorcerer Killer (Jutsushi Goroshi), yang dipekerjakan oleh Asosiasi Waktu (Time Vessel Association) di antara kelompok lain selama masa kerjanya sebagai orang yang tidak memiliki kutukan (non-curse user). Dia juga adalah ayah Megumi Fushiguro dan musuh lama Satoru Gojo. Selama bekerja untuk Grup Agama Bintang (Star Religious Group), Toji berperan sebagai antagonis utama dalam arc cerita Masa Lalu Gojo (Gojo's Past Arc).</p>
