--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="gallerystyle.css">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,19 @@
     <body>
         <header>
             <nav>
+                <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
+             </ul>
             </nav>
         </header>
         <main>
             <h1>Gallery</h1>
+            <br>
             <h2>Ini kumpulan dari beberapa foto</h2>
+            <br>
             <div>
                 <h3>Foto mengenai Honkai Star Rail</h3>
                 <img src="Gallery/Game Awards 2023 Win Celebratory Visual.jpg" alt="image1" width="500px">
