--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
                 </ul>
             </nav>
         </header>
+        <script src="script.js"></script>
     </body>
     <main>
     <h1>Ini adalah tampilan Home dari Website sederhana</h1>
     <br>
-    <p><b>Nama: </b> Ryan Christian Fabian Rattu</p>
-    <br> <!-- ini perubahan nya --> 
-    <p><b>NIM: </b>220211060114</p>
+    <p><b>Nama: Ryan Christian Fabian Rattu</b> </p>
+    <br>
+    <p><b>NIM: 220211060114</b></p>
 </main>
 </html>
