--- a/gallery.html
+++ b/gallery.html
@@ -22,17 +22,16 @@
             <br>
             <h2>Ini kumpulan dari beberapa foto</h2>
             <br>
-            <div>
                 <h3>Foto mengenai Honkai Star Rail</h3>
-                <img src="Gallery/Game Awards 2023 Win Celebratory Visual.jpg" alt="image1" width="500px">
-                <img src="Gallery/honkaistarrail.jpeg" alt="image2" width="500px">
+                <img src="Gallery/Game Awards 2023 Win Celebratory Visual.jpg" alt="image1" width="500px" loading="lazy">
+                <img src="Gallery/honkaistarrail.jpeg" alt="image2" width="500px" loading="lazy">
                 <h3>Foto mengenai Girl Group New Jeans</h3>
-                <img src="Gallery/newjeans-omg-4k-wallpaper-uhdpaper.com-231@0@i.jpg" alt="image3"width="500px"> 
-                <img src="Gallery/newjeans-omg-hyein-hanni-minji-danielle-4k-wallpaper-uhdpaper.com-229@0@i.jpg" alt="image4" width="500px">
+                <img src="Gallery/newjeans-omg-4k-wallpaper-uhdpaper.com-231@0@i.jpg" alt="image3"width="500px" loading="lazy"> 
+                <img src="Gallery/newjeans-omg-hyein-hanni-minji-danielle-4k-wallpaper-uhdpaper.com-229@0@i.jpg" alt="image4" width="500px" loading="lazy">
                 <h3>Foto mengenai Toji Fushiguro</h3> 
-                <img src="Gallery/1134715.jpg" alt="image5" width="500px"> 
-                <img src="Gallery/peakpx.jpg" alt="image6" width="500px"> 
-            </div>
+                <img src="Gallery/1134715.jpg" alt="image5" width="500px" loading="lazy"> 
+                <img src="Gallery/peakpx.jpg" alt="image6" width="500px" loading="lazy">
         </main>
+        <script src="galleryscript.js"></script>
     </body>
 </html>
