--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,6 @@
                 <li>No. Telepon: 0812-3456-7890</li>
             </ul>
         </main>
+        <script src="contactscript.js"></script>
     </body>
 </html>
